[gd_scene load_steps=8 format=3 uid="uid://hrawmeo0bps1"]

[ext_resource type="FontFile" uid="uid://1ocjgmtw3srp" path="res://fonts/doomed/doomed.ttf" id="1_ccndx"]
[ext_resource type="Script" path="res://scripts/UI/shop.gd" id="1_rj50a"]
[ext_resource type="StyleBox" uid="uid://cqcir2n7ttxsg" path="res://textures/general/shop_panel_clr.tres" id="2_k2wxx"]
[ext_resource type="StyleBox" uid="uid://dv4mikdaf0xcy" path="res://textures/general/shop_btn_clr.tres" id="3_8p3o6"]
[ext_resource type="FontFile" uid="uid://b37i10y1miif5" path="res://fonts/kids_knowledge_2/Kid Knowledge 2 Clean.otf" id="3_e6alw"]
[ext_resource type="PackedScene" uid="uid://da6m0b4ofar1f" path="res://scenes/UI/shop_upgrade.tscn" id="4_sawuj"]
[ext_resource type="StyleBox" uid="uid://d2fevip7epj5a" path="res://textures/general/shop_btn_clr_red.tres" id="5_w7egb"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rj50a")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Title" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -89.5
offset_top = 37.0
offset_right = 89.5
offset_bottom = 109.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("1_ccndx")
theme_override_fonts/bold_italics_font = ExtResource("1_ccndx")
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "[wave][color=gold]THE SHOP[/color][/wave]"
fit_content = true

[node name="PlayerPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 92.0
offset_top = 113.0
offset_right = 541.0
offset_bottom = -204.0
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_k2wxx")

[node name="Title2" type="RichTextLabel" parent="PlayerPanel"]
layout_mode = 1
offset_left = 12.0
offset_top = 9.0
offset_right = 310.0
offset_bottom = 54.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("1_ccndx")
theme_override_font_sizes/normal_font_size = 28
bbcode_enabled = true
text = "[color=lightgray]Current Inventory"

[node name="InventoryList" type="VBoxContainer" parent="PlayerPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.5
offset_top = -87.5
offset_right = 143.5
offset_bottom = 110.5
grow_horizontal = 2
grow_vertical = 2

[node name="UpgradesPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -657.0
offset_top = 114.0
offset_right = -86.0
offset_bottom = -201.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_k2wxx")

[node name="Title" type="RichTextLabel" parent="UpgradesPanel"]
layout_mode = 1
offset_left = 17.0
offset_top = 8.0
offset_right = 169.0
offset_bottom = 53.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("1_ccndx")
theme_override_font_sizes/normal_font_size = 28
bbcode_enabled = true
text = "[color=lime]upgrades"

[node name="VBoxUpgrades" type="VBoxContainer" parent="UpgradesPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -162.5
offset_top = 53.0
offset_right = 206.5
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="SampeUpgrade" parent="UpgradesPanel/VBoxUpgrades" instance=ExtResource("4_sawuj")]
visible = false
layout_mode = 2

[node name="BottomContainer" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 91.0
offset_top = -166.0
offset_right = -76.0
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = ExtResource("2_k2wxx")

[node name="ContinueButton" type="Button" parent="BottomContainer"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -15.5
offset_right = -54.0
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0.682353, 0, 1)
theme_override_fonts/font = ExtResource("3_e6alw")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("3_8p3o6")
text = "Continue"

[node name="Quit" type="Button" parent="BottomContainer"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 55.0
offset_top = -15.5
offset_right = 102.0
offset_bottom = 15.5
grow_vertical = 2
theme_override_colors/font_color = Color(0.69246, 1.92523e-06, 2.88785e-07, 1)
theme_override_styles/normal = ExtResource("5_w7egb")
text = "Quit"

[connection signal="button_down" from="BottomContainer/ContinueButton" to="." method="_on_continue_button_button_down"]
[connection signal="button_down" from="BottomContainer/Quit" to="." method="_on_quit_button_down"]
